--- a/src/components/steps/Steps.scss
+++ b/src/components/steps/Steps.scss
@@ -28,10 +28,18 @@
       line-height: 0.8;
       letter-spacing: -0.01em;
       text-transform: lowercase;
-      text-align: center;
+      text-align: left;
 
       @media (min-width: $min-tablet) and (min-height: $min-desktop-height) {
         @include responsive-font(120, 450);
+      }
+    }
+
+    &ContentSmaller {
+      font-size: 88px;
+
+      @media (min-width: $min-tablet) and (min-height: $min-desktop-height) {
+        @include responsive-font(88, 400);
       }
     }
   }
